data/derived/comb/progs/unify/prog7930.ml.out
Characters 39-44:
  let fixpoint (f,b) = wwhile ((fpHelper (f,b)), b);;
                                         ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('c -> 'd) * 'c * 'e
